[package]
name = "SuperNova"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8.5"
futures = "0.3.32"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }